
  From Justin Gullingsrud:
    - support -std=c++0x and related CXXFLAGS in pkgconfig (ParseFlags)

  From Vincent Beffara:
    - Support -dylib_file in pkgconfig (ParseFlags)

  From Gary Oberbrunner and Sohail Somani:
    - new construction variable WINDOWS_EMBED_MANIFEST to automatically
      embed manifests in Windows EXEs and DLLs.

  From Gary Oberbrunner:
    - Fix unicode error when using non-ASCII filenames with Copy or Install
    - Put RPATH in LINKCOM rather than LINKFLAGS so resetting
      LINKFLAGS doesn't kill RPATH
    - Fix precompiled headers on Windows when variant dir name has spaces.
    - Adding None to an Action no longer fails (just returns original action)
    - New --debug=prepare option to show each target as it's being
      prepared, whether or not anything needs to be done for it.
    - New debug option --debug=duplicate to print a line for each
      unlink/relink (or copy) of a variant file from its source file.
    - Improve error message for EnumVariables to show legal values.
    - Fix Intel compiler to sort versions >9 correctly (esp. on Linux)
    - Fix Install() when the source and target are directories and the
      target directory exists.
    
  From David Garcia Garzon:
    - Fix Delete to be able to delete broken symlinks and dir
      symlinks.
  
  From Robert Lehr:
    - Handle .output file generated by bison/yacc properly. Cleaning it
      when necessary.

  From Antoine Dechaume:
    - Handle SWIG file where there is whitespace after the module name
      properly. Previously the generated files would include 
      the whitespace.

  From Dmitry R.:
    - Handle Environment in case __semi_deepcopy is None

  From Benoit Belley:

    - Much improved support for Windows UNC paths (\\SERVERNAME).

  From Jean-Baptiste Lab:

    - Fix problems with appending CPPDEFINES that contain
      dictionaries, and related issues with Parse/MergeFlags and
      CPPDEFINES.

  From Allen Weeks:
